<resources>
    <!-- String resources (non translatable) -->
    <string name="AppName">MarkusLauncher</string>

    <!-- To be translated -->
    <string name="AmazonHome">FireTV Home</string>
    <string name="MoveAppAndClickToDrop">Now move app and click again to drop \n(Press RETURN to CANCEL)</string>
    <string name="MoveAppAndClickToDropWhenStartedByMenu">Now move app and click to drop \n(Press RETURN to CANCEL)</string>
    <string name="iptitle">IP Address</string>
    <string name="hostnametitle">Hostname</string>
    <string name="notfound">not found..</string>
    <string name="showsysapps_desc">Show also system apps in app list.</string>
    <string name="showsysapps_title">Show system apps</string>
    <string name="hiddenapps_desc">Apps that shall not be shown in apps list.</string>
    <string name="hiddenapps_title">Hidden Apps</string>
    <string name="applist_settings">App Listing Settings</string>
    <string name="is_invalid_number">is invalid for this setting!</string>
    <string name="autoselectfirsticon_desc">Auto select the first icon when switching to the app drawer (All Apps).</string>
    <string name="autoselectfirsricon_title">Auto select first icon (App Drawer)</string>
    <string name="leftbar_allapps">Apps</string>
    <string name="leftbar_infos">System</string>
    <string name="leftbar_settings">Settings</string>
    <string name="appsettingssort">Move</string>
    <string name="appsettings_settings">App Settings</string>
    <string name="language_summary">Set language manually.</string>
    <string name="language_title">Language</string>
    <string name="wifissidtitle">WiFi / WLAN Name (SSID)</string>
    <string name="layout_settings">Layout Settings</string>
    <string name="wallpaper_summary">Set a custom background image / wallpaper for AppStarter</string>
    <string name="wallpaper_title">Wallpaper / Background Image</string>
    <string name="remove_wallpaper">Remove Wallpaper</string>
    <string name="select_wallpaper">Select Wallpaper</string>
    <string name="system_informative">FireTV Settings</string>
    <string name="system_settings">Root FireTV Settings</string>
    <string name="system_sleeptime_edit_summary">Time of inactivity in minutes after which the device goes to sleep.</string>
    <string name="system_sleeptime_edit_title">Sleep Timeout</string>
    <string name="gotosleep_summary">ATTENTION: This feature has been removed from AppStarter! Long press home-button to find the option to go to sleep immediately.</string>
    <string name="gotosleep_title">Go to sleep</string>
    <string name="system_restart_title">Reboot</string>
    <string name="sleeptime_limit">Only values between %1$d and %2$d minutes are allowed!</string>
    <string name="devicedetailstitle">Device Details</string>
    <string name="appicon_size_title">App Icon Size</string>
    <string name="appicon_size_summary">Size between 0 and 200 (in DPI) of the App-Icons on the main App-Drawer in DPI. Set to 0 for default.</string>
    <string name="importExport">Import / Export</string>
    <string name="importexport_export_summary">Export current Markus Launcher settings to ZIP-File.</string>
    <string name="importexport_export_title">Export</string>
    <string name="importexport_import_summary">Import Markus Launcher Settings from ZIP-File. Be sure to only import trusted ZIP-Files!</string>
    <string name="importexport_import_title">Import</string>
    <string name="deviceuptime">Uptime</string>
    <string name="uptimedesc">Device is up for %1$s (startup: %2$s)</string>
    <string name="system_restart_summary_removed">ATTENTION: This feature has been removed from AppStarter hold \"Enter/Select\"-Button + \"Play\"-Button to restart FireTV.</string>
    <string name="hideleftbarinappoverview_title">Hide left bar in app drawer</string>
    <string name="hideleftbarinappoverview_desc">Left selection bar is hidden when on the main page (App Drawer)</string>
    <string name="showbackgroundforappnames_title">Background for App Names (App Drawer)</string>
    <string name="showbackgroundforappnames_desc">Shows a background for app names in the app drawer. This helps to read app names, if a wallpaper is used.</string>
    <string name="not_installed">not installed</string>
    <string name="AmazonYoutube">Amazon Youtube</string>
    <string name="system_informative2">Root Reboot Sleep</string>
    <string name="two_opts_display">Display and Sound</string>
    <string name="two_opts_net">Network</string>
    <string name="two_opts_dev">Bluetooth and Remotes</string>
    <string name="two_opts_access">Accessibility</string>
    <string name="two_opts_app">Applications</string>
    <string name="two_opts_pref">Preferences</string>
    <string name="two_opts_device">My FireTV</string>
    <string name="two_opts_account">Amazon Account</string>
    <string name="two_opts_res1">Notifications</string>
    <string name="two_opts_res2">Equipment</string>
    <string name="two_opts_res3">Sleep</string>
    <string name="two_opts_nix"> </string>
    <string name="two_opts_res4">Developer Tools Menu</string>
    <string name="two_opts_res5">Reboot</string>
    <string name="two_opts_res6">Enable ADB</string>
    <string name="two_opts_res7">Enable non Market Apps</string>
    <string name="two_opts_res8">Screensaver</string>
</resources>
